<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F7F7"
    tools:context=".Year">

    <TextView
        android:id="@+id/year"
        android:layout_width="408dp"
        android:layout_height="122dp"
        android:gravity="center"
        android:text="@string/year"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="45sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year">

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="96dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="52dp"
            app:cardCornerRadius="30dp"
            android:clickable="true"
            android:id="@+id/yearI"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#9E2727"
                android:gravity="center"
                android:text="@string/i"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="96dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="30dp"
            android:clickable="true"
            android:id="@+id/yearII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#9E2727"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:text="@string/ii" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="96dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="52dp"
            app:cardCornerRadius="30dp"
            android:clickable="true"
            android:id="@+id/yearIII"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#9E2727"
                android:gravity="center"
                android:text="@string/iii"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="96dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="52dp"
            app:cardCornerRadius="30dp"
            android:clickable="true"
            android:id="@+id/yearIV"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#9E2727"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:text="@string/iv" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>